projects page spacing fixed

--- a/src/scss/components/_project.scss
+++ b/src/scss/components/_project.scss
@@ -1,3 +1,11 @@
 .project {
-  @include padding;
+  height: 100%;
+  article {
+    height: 100%;
+    @include flex(column, space-between);
+    @include padding;
+  }
+  p {
+    padding: 0.75rem 0;
+  }
 }
